Add vaccination calendar admin slice
